--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,95 +1,126 @@
-// /* Main autocomplete wrapper */
-// .eslint-nav .algolia-autocomplete {
-//   width: 100%;
-// }
-// .eslint-nav .aa-dropdown-menu {
-//   background-color: #FFF;
-//   border: 1px solid #333;
-//   border-radius: 4px;
-//   font-size: 16px;
-//   margin: 6px 0 0;
-//   padding: 4px;
-//   text-align: left;
-//   left: -20px !important;
-//   right: -20px !important;
-// }
+@import "variables";
+$color-border: #3A33D1;
+$color-category-header: #4B54DE;
+$color-highlight-header: #4D47D5;
+$color-highlight: #3A33D1;
+$color-selected-text: #272296;
+$color-selected-background: #EBEBFB;
+$breakpoint-small: 568px;
+
+
+// Need to add to the readme something along the lines of:
+//
+// The dropdown adapts to screen size. It more or less follows the breakpoints
+// of Bootstrap (need to list them). The code is written mobile-first. The
+// larger the screen size, the more rules we add to overwrite the previous one,
+// moving from one to two column.
+//
+// It is expected that the page layout also follow those breakpoints. The
+// breakpoints are defined as variables in the SCSS, so one can update them.
+
+// Main autocomplete wrapper
+.aa-dropdown-menu {
+  background-color: #FFF;
+  border: 1px solid #333;
+  border-radius: 4px;
+  font-size: 16px;
+  margin: 6px 0 0;
+  padding: 4px;
+  text-align: left;
+  left: -20px !important; // Hardcoded
+  right: -320px !important; // Hardcoded
+}
+
+// Each suggestion
+.ads-suggestion {
+  color: #333;
+  cursor: pointer;
+  overflow: hidden;
+  border-bottom: 1px solid $color-border;
+}
+
+// Main category headers
+.ads-suggestion--category-header {
+  display: none;
+  background-color: $color-category-header;
+  color: white;
+  font-weight: 600;
+  padding: 5px 10px;
+  text-align: left;
+  // Only show it when flaggued as "__main"
+  .ads-suggestion__main & {
+    display: block;
+  }
+}
+
+// Highlight
+.ads-suggestion--highlight {
+  padding: 0;
+  color: $color-highlight;
+  background: none;
+  font-weight: 600;
+  // Highlight the background in header
+  .ads-suggestion--category-header & {
+    color: inherit;
+    background-color: $color-highlight-header;
+  }
+}
+
+// Selected suggestion
+.aa-cursor .ads-suggestion--content {
+  color: $color-selected-text;
+}
+.aa-cursor .ads-suggestion {
+  background: $color-selected-background;
+}
+
+// The secondary column is hidden on small screens
+.ads-suggestion--subcategory-column {
+  display: none;
+}
+// The text snippet is hidden on small screens
+.ads-suggestion--text {
+  display: none;
+}
+
+.ads-suggestion--content {
+  padding: 3px 5px;
+}
+
+.ads-suggestion--subcategory-inline {
+  display: inline-block;
+  font-weight: bold;
+  &:after {
+    content: " › ";
+  }
+}
+.ads-suggestion--title {
+  display: inline;
+}
+
+// BREAKPOINT 1:
+// Screen is big enough to display the text snippets
+@media (min-width: $breakpoint-small) {
+  .ads-suggestion--text {
+    display: block;
+    font-size: .9em;
+    padding: 2px 0;
+  }
+}
+
+
+
 // 
-// /* Category headers */
-// .eslint-nav .suggestion-category {
-//   background-color: #4B54DE;
-//   color: white;
-//   font-weight: 600;
-//   padding: 5px 10px;
-//   text-align: left;
-// }
-// .eslint-nav .suggestion-category mark {
-//   background-color: #4D47D5;
-//   color: white;
-//   padding: 0;
-// }
-// 
-// /* Suggestion */
-// .eslint-nav .suggestion {
-//   color: #333;
-//   cursor: pointer;
-//   overflow: hidden;
-//   border-bottom: 1px solid #3A33D1;
-// }
-// .eslint-nav .aa-suggestion:last-child .suggestion {
-//   border-bottom-color: transparent;
-// }
-// .eslint-nav .suggestion mark {
-//   padding: 0;
-//   color: #3A33D1;
-//   background: none;
-//   font-weight: 600;
-// }
-// .eslint-nav .suggestion-subcategory-secondary {
-//   display: inline-block;
-//   font-weight: bold;
-// }
-// .eslint-nav .suggestion-subcategory-secondary:after {
-//   content: " › ";
-// }
-// .eslint-nav .suggestion-title {
-//   display: inline;
-// }
-// .eslint-nav .suggestion-content {
-//   padding: 3px 5px;
-// }
-// /* Hidden elements for this viewport */
-// .eslint-nav .suggestion-subcategory-main,
-// .eslint-nav .suggestion-text {
-//   display: none;
-// }
-// 
-// /* Selected suggestion */
-// .eslint-nav .aa-cursor .suggestion-content,
-// .eslint-nav .aa-cursor .suggestion-content code,
-// .eslint-nav .aa-cursor .suggestion-content mark {
-//   color: #272296;
-// }
-// .eslint-nav .aa-cursor .suggestion {
-//   background: #EBEBFB;
-// }
-// 
-// /* Screen big enough to display the text snippets */
-// @media (min-width: 568px) {
-//   .eslint-nav .suggestion-text {
-//     display: block;
-//     font-size: .9em;
-//   }
-// }
 // 
 // /* Screen big enough to display results in two columns */
 // @media (min-width: 768px) {
 //    /* Use table display for the two columns */
-//   .eslint-nav .suggestion {
+//   .suggestion {
 //     display: table;
 //     width: 100%;
 //     border-bottom: 1px solid #9D99E8;
 //   }
-//   .eslint-nav .suggestion-subcategory-main {
+//   .suggestion-subcategory-main {
 //     border-right: 1px solid #9D99E8;
 //     background: #F2F2FF;
 //     color: #4E4726;
@@ -103,17 +134,17 @@
 //     vertical-align: top;
 //     width: 135px;
 //   }
-//   .eslint-nav .suggestion-content {
+//   .suggestion-content {
 //     display: table-cell;
 //     padding: 5px 10px;
 //   }
-//   .eslint-nav .suggestion-subcategory-secondary {
+//   .suggestion-subcategory-secondary {
 //     display: none;
 //   }
-//   .eslint-nav .suggestion-title {
+//   .suggestion-title {
 //     font-weight: 600;
 //   }
-//   .eslint-nav .suggestion-text {
+//   .suggestion-text {
 //     display: block;
 //     font-weight: normal;
 //     padding: 2px;
@@ -122,7 +153,7 @@
 // 
 // /* Enough room to display the autocomplete in the header directly */
 // @media (min-width: 996px) {
-//   .eslint-nav .aa-dropdown-menu {
+//   .aa-dropdown-menu {
 //     left: -30px !important;
 //     right: -270px !important;
 //   }
