--- a/docs/index.haml
+++ b/docs/index.haml
@@ -40,4 +40,4 @@ layout: default
         %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. In, sit, veritatis tempora ipsum, provident fugiat quas, eum dicta architecto
 
 
-    %p Here are some examples of what you could build with docsearch.js.
+    %p Here are some examples of what you could build with docsearch.
