chore(website): add a "Join the beta" form.

--- a/docs/css/_home.scss
+++ b/docs/css/_home.scss
@@ -7,9 +7,33 @@ h2 {
   font-size: 1.8em;
   font-weight: normal;
   letter-spacing: 1px;
-  margin-bottom: 1em; }
+  margin-bottom: 1em;
+}
 
 .showcase--image {
   max-width: 200px;
 }
 
+.jumbotron {
+}
+
+#join-form {
+  background: white;
+  display: block;
+  width: 400px;
+  margin: 0 auto;
+  border: 2px solid #ccc;
+}
+
+@media (min-width: $screen-lg) {
+  .jumbotron {
+    height: 400px;
+  }
+
+  #join-form {
+    position: absolute;
+    top: 60px;
+    right: -20px;
+    padding: 10px;
+  }
+}
