--- a/docs/index.haml
+++ b/docs/index.haml
@@ -4,12 +4,12 @@ layout: default
 
 .main-content
   .jumbotron
-    .container
+    .container.pos-rel
       %h1 Documentation Search
 
       %p Add relevant, fast and reliable search to your documentation website in minutes.
 
-      %p.text-center <button type="button" class="btn btn-primary">Request search on your website</button>
+      %iframe#join-form{height: 356, allowTransparency: true, frameborder: 0, scrolling: 'no', src: '//www.formget.com/app/embed/form/H5IR-174988/i?w=328'}
 
   .container
     %h1 Showcase
