--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,12 +1,12 @@
 $color-border: #3A3A3A;
 $color-border-light: lighten($color-border, 15%);
-$color-category-header: #333333;
-$color-highlight-header: #3A3A3A;
-$color-highlight: #448CDE;
-$color-selected-background: #CECECE;
-$color-selected-text: #0000FF;
-$color-left-column-bg: #CECECE;
-$color-left-column: #4E4726;
+$color-category-header-background: #3C4658;
+$color-highlight-header-background: lighten($color-category-header-background, 15%);
+$color-highlight-text: #0064E1;
+$color-selected-background: #E7EDF3;
+$color-selected-text: #0064E1;
+$color-left-column-bg: #F1F3F5;
+$color-left-column: #555;
 
 $breakpoint-medium: 568px;
 $breakpoint-large: 768px;;
