--- a/docs/css/_home.scss
+++ b/docs/css/_home.scss
@@ -1,22 +1,134 @@
+/* COLORS
+// -------------------------
+#46AEDA Algolia blue
+#FF2E6C Radical Red
+#091724 Black Pearl
+#C7C4C4 Gray text
+*/
+
+/* GENERAL
+// ------------------------- */
 html, body {
   position: relative;
-  @include size(100%,100%);
-  background-attachment: fixed; }
-
-h2 {
-  font-size: 1.8em;
-  font-weight: normal;
-  letter-spacing: 1px;
-  margin-bottom: 1em;
+  width: 100%;
+  height: 100%;
+  background-attachment: fixed;
+  font-family: "Raleway", "Open Sans", Helvetica, Arial, sans-serif;
 }
 
-.showcase--image {
-  max-width: 200px;
+
+
+/* HEADER
+// ------------------------- */
+header.site-header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 99;
+  background: linear-gradient(to right, rgba(10, 23, 36, 0.8) -50%, rgba(23, 44, 79, 0.5) 100%);
+  transition: background 2s ease;
+  border-bottom: 1px solid #232E3A;
+}
+header.site-header nav.navbar {
+  margin-bottom: 0;
+  background-color: #0B1724;
+  border-radius: 0;
+  border: none;
+}
+header.site-header nav.navbar .navbar-collapse.in {
+  background-color: #0B1724 !important;
+  animation: fadeInUp .2s ease-in-out;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 20%;
+  font-size: 1.2em;
+}
+header.site-header nav.navbar .navbar-collapse.in li {
+  padding-bottom: 1em;
+}
+header.site-header nav.navbar #logo img {
+  height: 32px;
+  margin-right: 12px;
+}
+header.site-header nav.navbar .navbar-header {
+  position: relative;
+  z-index: 2;
+  height: 50px;
+  font-size: 16px;
+  color: #FF2E6C;
+  line-height: 50px;
+}
+header.site-header nav.navbar .navbar-toggle {
+  background-color: #1d96c7;
+  border: solid 1px #1d96c7;
+  color: white;
+}
+header.site-header nav.navbar .navbar-toggle.collapsed {
+  background-color: transparent;
+  border: solid 1px rgba(255, 255, 255, 0.4);
+  color: white;
+}
+header.site-header nav.navbar .navbar-nav > li > a {
+  padding-bottom: 0;
+}
+header.site-header nav.navbar .navbar-nav > .active > a {
+  color: #1D96C7 !important;
+  background-color: transparent;
+}
+header.site-header nav.navbar .navbar-nav > li > a.navbar-github-link {
+  font-size: 32px;
+  padding-top: 10px;
+}
+header.site-header nav.navbar .navbar-nav > li > a.navbar-github-link:hover {
+  color: #46AEDA;
+  text-decoration: none;
 }
 
-.jumbotron {
+
+
+
+/* JUMBOTRON
+// ------------------------- */
+.main-content .jumbotron {
+  padding-top: 60px;
+  height: 700px;
+  background: #091724 url(../img/header-bg.png) no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  margin-bottom: 0;
+}
+.jumbotron .jumbotron-header {
+  text-align: center;
+  color: #FFF;
+}
+.jumbotron .jumbotron-header h1 {
+  font-size: 60px;
+  font-weight: 500;
+  font-family: "Helvetica Neue", "Raleway", "Open Sans", Helvetica, Arial, sans-serif;
+}
+.jumbotron .jumbotron-header .big {
+  font-size: 90px;
+}
+.jumbotron .jumbotron-header .blue {
+  color: #46AEDA;
+}
+.jumbotron .jumbotron-left-column {
+  padding-top: 100px;
+  float: left;
+  width: 400px;
+  color: #FFF;
+  margin-left: 120px;
 }
 
+
+
+/* JOIN FORM
+// ------------------------- */
 #join-form {
   background: white;
   display: block;
@@ -25,15 +137,115 @@ h2 {
   border: 2px solid #ccc;
 }
 
-@media (min-width: $screen-lg) {
+@media (min-width: 1200px) {
   .jumbotron {
     height: 400px;
   }
-
   #join-form {
     position: absolute;
-    top: 60px;
-    right: -20px;
+    top: 240px;
+    right: 120px;
     padding: 10px;
   }
 }
+
+
+
+
+/* PAGE SECTIONS
+// ------------------------- */
+.page-section {
+  padding-top: 100px;
+  padding-bottom: 60px;
+  font-size: 16px;
+  line-height: 1.8;
+  color: #091724;
+}
+.page-section-dark {
+  background-color: #091724;
+  color: #C7C4C4;
+}
+h2.page-section-title {
+  font-size: 28px;
+  text-transform: uppercase;
+  font-weight: 600;
+  margin-top: 0;
+  margin-bottom: 30px;
+  text-align: center;
+}
+.page-section-dark h2.page-section-title{
+  color: #FFF;
+}
+h2.page-section-title:after {
+  display: block;
+  content: ' ';
+  height: 10px;
+  border-bottom: 3px solid #FF2E6C;
+  margin: 4px auto;
+  width: 60px;
+}
+#section_why {
+  padding-left: 120px;
+  padding-right: 120px;
+  font-size: 20px;
+}
+#section_examples {
+  font-size: 18px;
+  text-align: center;
+}
+#section_examples a {
+  color: #C7C4C4;
+}
+#section_examples a:hover {
+  color: #46AEDA;
+  text-decoration: none;
+}
+#section_examples .showcase {
+  margin-top: 40px;
+  text-align: center;
+}
+#section_examples .showcase img.logo {
+  display: inline-block;;
+  height: 60px;
+  margin-bottom: 20px;
+}
+#section_examples .showcase img.example {
+  width: 100%;
+}
+#section_how h3 .how-it-works-number {
+  float: left;
+  line-height: 1;
+  color: #46AEDA;
+  font-size: 70px;
+  font-weight: bold;
+  font-family: "Helvetica Neue";
+  position: relative;
+  top: -13px;
+  margin-right: 7px;
+}
+#section_how p {
+  clear: both;
+}
+#section_get-started {
+  padding-left: 120px;
+  padding-right: 120px;
+  font-size: 20px;
+}
+
+
+/* FOOTER
+// ------------------------- */
+footer.site-footer {
+  padding-top: 2em;
+  margin-top: 0;
+  border-top: 1px solid #eeeeee;
+  background-color: white;
+  text-align: center;
+}
+footer.site-footer .fa.fa-heart {
+  color: #e61870;
+}
+footer.site-footer .input-group-addon {
+  background-color: transparent;
+}
+
