chore(website): adding more examples

--- a/docs/index.haml
+++ b/docs/index.haml
@@ -42,6 +42,11 @@ layout: default
             %br Take a look.
       .row
         .col-sm-4.showcase
+          %a{:href => "//bootstrap.algolia.com", :target => "_blank"}
+            %img.img-responsive.logo{:src => "./img/showcase/logo-bootstrap.png"}
+              %img.img-responsive.example{:src => "./img/showcase/example-bootstrap.gif"}
+                Bootstrap
+        .col-sm-4.showcase
           %a{:href => "//eslint.org/", :target => "_blank"}
             %img.img-responsive.logo{:src => "./img/showcase/logo-eslint.png"}
               %img.img-responsive.example{:src => "./img/showcase/example-eslint.gif"}
@@ -51,6 +56,11 @@ layout: default
             %img.img-responsive.logo{:src => "./img/showcase/logo-scala.png"}
               %img.img-responsive.example{:src => "./img/showcase/example-scala.gif"}
                 Scala
+        .col-sm-4.showcase
+          %a{:href => "//babeljs.algolia.com/", :target => "_blank"}
+            %img.img-responsive.logo{:src => "./img/showcase/logo-babel.png"}
+              %img.img-responsive.example{:src => "./img/showcase/example-babel.gif"}
+                Babel.js
         .col-sm-4.showcase
           %a{:href => "//reactjs.algolia.com/", :target => "_blank"}
             %img.img-responsive.logo{:src => "./img/showcase/logo-react.png"}
