chore(website): simple join the program form

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -22,6 +22,8 @@
 {%if page.noFooter == null %}
     {% include footer.html %}
 {% endif %}
+
+    <script src="//cdn.jsdelivr.net/jquery/2.1/jquery.min.js"></script>
     <script src="{{ "/js/bootstrap.min.js" | prepend: site.baseurl }}"></script>
     <script src="//cdn.jsdelivr.net/autocomplete.js/0/autocomplete.jquery.min.js"></script>
     <script src="//cdn.jsdelivr.net/algoliasearch/3/algoliasearch.min.js"></script>
