--- a/docs/index.haml
+++ b/docs/index.haml
@@ -12,31 +12,29 @@ layout: default
             OC
           = succeed "EARCH" do
             %span.big S
-        %p The easiest way to add search to your documentation.
+        %p#top The easiest way to add search to your documentation.
       .jumbotron-left-column
         %p We’ve created the fastest, easiest way to search within documentation.
         %p And best of all? It’s free!
       %form#join-form{action: '#', method: 'POST'}
         %h3 Want to try it out?
-        .row
-          .col-sm-10.col-sm-offset-1
-            .spacer20
-            .input-group
-              %span.input-group-addon
-                %i.fa.fa-fw.fa-envelope-o
-              %input.form-control{type: 'email', placeholder: 'you@example.org', name: 'email'}
-            .text-sm We'll crawl the documentation pages of your website and index them using Algolia.
-            .spacer20
-            .input-group
-              %span.input-group-addon
-                %i.fa.fa-fw.fa-globe
-              %input.form-control{type: 'text', placeholder: 'https://website.com/doc', name: 'url'}
-            .text-sm We'll send you the code you need to improve the search of your documentation.
-            .spacer20
-            %p.text-center
-              %button.btn.btn-primary{type: 'submit'}
-                Join the DocSearch beta
-                %i.fa.fa-chevron-right
+        .spacer20
+        .input-group
+          %span.input-group-addon
+            %i.fa.fa-fw.fa-envelope-o
+          %input.form-control{type: 'email', placeholder: 'you@example.org', name: 'email'}
+        %p.text-sm We'll crawl the documentation pages of your website and index them using Algolia.
+        .spacer20
+        .input-group
+          %span.input-group-addon
+            %i.fa.fa-fw.fa-globe
+          %input.form-control{type: 'text', placeholder: 'https://website.com/doc', name: 'url'}
+        %p.text-sm We'll send you the code you need to improve the search of your documentation.
+        .spacer20
+        .text-center
+          %button.btn.btn-primary.btn-lg{type: 'submit'}
+            Help me improve my search
+            %i.fa.fa-heart
   #section_why.page-section
     .container
       .row
@@ -77,7 +75,7 @@ layout: default
           %a{:href => "//reactjs.algolia.com/", :target => "_blank"}
             %img.img-responsive.logo{:src => "./img/showcase/logo-react.png"}
               %img.img-responsive.example{:src => "./img/showcase/example-react.gif"}
-                React.js
+                React
   #section_how.page-section
     .container
       .row
@@ -108,6 +106,11 @@ layout: default
           %h2.page-section-title Get started
           %p Add the url of your documentation site and your email to the form at the top of the page. We’ll get back to you with what you need to integrate your new search into   your website.
           %p Don’t forget, DocSearch is completely free! There’s no need to sign up for Algolia or submit any payment information. Let’s tackle document search together.
+          .spacer30
+          %p.text-center
+            %a.btn.btn-primary.btn-lg{href: '#top'}
+              Help me improve my search
+              %i.fa.fa-heart
 
 {% contentfor site-footer %}
 <script src="{{ "/js/home.js" | prepend: site.baseurl }}"></script>
