--- a/docs/css/_page.scss
+++ b/docs/css/_page.scss
@@ -1,10 +1,9 @@
 .page-content {
-  font-size: 1.1em;
   line-height: 1.5em;
 }
 
-code {
-  color: #FF2E6C;
+pre {
+  font-size: .8em;
 }
 
 .CodeRay .code pre * {
