chore(website): wording

--- a/docs/index.haml
+++ b/docs/index.haml
@@ -96,8 +96,8 @@ layout: default
         .col-sm-4.how-it-works
           %h3
             %span.how-it-works-number> 3
-            You add the autocomplete script to your UI
-          %p We’ll send you the script so you can integrate Algolia autocomplete to power your search.
+            You add the JS/CSS snippets to your website
+          %p We’ll send you a few lines to code to integrate Algolia autocomplete and power your search.
           %p You will receive the same speed, relevance and best-in-class UX as our paying customers.
   #section_get-started.page-section.page-section-dark
     .container
