chore(docs): those are links, no need to play with //

--- a/docs/index.haml
+++ b/docs/index.haml
@@ -52,27 +52,27 @@ layout: default
             %br Take a look.
       .row
         .col-sm-4.showcase
-          %a{:href => "//bootstrap.algolia.com", :target => "_blank"}
+          %a{:href => "https://bootstrap.algolia.com", :target => "_blank"}
             %img.img-responsive.logo{:src => "./img/showcase/logo-bootstrap.png"}
               %img.img-responsive.example{:src => "./img/showcase/example-bootstrap.gif"}
                 Bootstrap
         .col-sm-4.showcase
-          %a{:href => "//eslint.org/", :target => "_blank"}
+          %a{:href => "http://eslint.org/", :target => "_blank"}
             %img.img-responsive.logo{:src => "./img/showcase/logo-eslint.png"}
               %img.img-responsive.example{:src => "./img/showcase/example-eslint.gif"}
                 ESLint
         .col-sm-4.showcase
-          %a{:href => "//docs.scala-lang.org/", :target => "_blank"}
+          %a{:href => "http://docs.scala-lang.org/", :target => "_blank"}
             %img.img-responsive.logo{:src => "./img/showcase/logo-scala.png"}
               %img.img-responsive.example{:src => "./img/showcase/example-scala.gif"}
                 Scala
         .col-sm-4.showcase
-          %a{:href => "//babeljs.algolia.com/", :target => "_blank"}
+          %a{:href => "https://babeljs.algolia.com/", :target => "_blank"}
             %img.img-responsive.logo{:src => "./img/showcase/logo-babel.png"}
               %img.img-responsive.example{:src => "./img/showcase/example-babel.gif"}
                 Babel.js
         .col-sm-4.showcase
-          %a{:href => "//reactjs.algolia.com/", :target => "_blank"}
+          %a{:href => "https://reactjs.algolia.com/", :target => "_blank"}
             %img.img-responsive.logo{:src => "./img/showcase/logo-react.png"}
               %img.img-responsive.example{:src => "./img/showcase/example-react.gif"}
                 React
