--- a/docs/index.haml
+++ b/docs/index.haml
@@ -7,49 +7,42 @@ layout: default
     .container.pos-rel
       .jumbotron-header
         %h1.jumbotron-title
-          %span.blue
-            %span.big> D
-            OC
-          = succeed "EARCH" do
-            %span.big S
+          %img.logo{:src => "./img/logo-docsearch.svg"}
         %p#top The easiest way to add search to your documentation.
       .jumbotron-left-column
         %p We’ve created the fastest, easiest way to search within documentation.
-        %p And best of all? It’s free!
+        %p And best of all? It’s FREE.
       %form#join-form{action: '#', method: 'POST'}
-        %h3 Want to try it out?
+        %h3 Get Started. It’s FREE!
         .spacer20
         .input-group
           %span.input-group-addon
             %i.fa.fa-fw.fa-envelope-o
           %input.form-control{type: 'email', placeholder: 'you@example.org', name: 'email'}
-        %p.text-sm We'll crawl the documentation pages of your website and index them using Algolia.
+        %p.text-sm We’ll crawl the documentation pages of your website and index them on Algolia.
         .spacer20
         .input-group
           %span.input-group-addon
             %i.fa.fa-fw.fa-globe
           %input.form-control{type: 'text', placeholder: 'https://website.com/doc', name: 'url'}
-        %p.text-sm We'll send you the code you need to improve the search of your documentation.
+        %p.text-sm We’ll email you the code you need to integrate the search into your documentation.
         .spacer20
         .text-center
           %button.btn.btn-primary.btn-lg{type: 'submit'}
-            Help me improve my search
-            %i.fa.fa-heart
+            JOIN THE BETA!
   #section_why.page-section
     .container
       .row
         .col-sm-10.col-sm-offset-1
           %h2.page-section-title Why DocSearch?
           %p We’re scratching our own itch here. As developers, we spend a lot of time reading documentation, and it isn’t always easy to find the information we need.
-          %p Not blaming anyone here. Building a good search for a documentation is a complex challenge. We happen to have a lot of experience doing that, and we want to share it   with the world. For free.
+          %p Not blaming anyone here. Building a good search for a documentation is a complex challenge. We happen to have a lot of experience doing that, and we want to share it with the world. For free.
   #section_examples.page-section.page-section-dark
     .container
       .row
         .col-sm-10.col-sm-offset-1
           %h2.page-section-title DocSearch is live
-          %p
-            We’ve integrated DocSearch into several open source projects.
-            %br Take a look.
+          %p We’ve integrated DocSearch into several open source projects. Take a look.
       .row
         .col-sm-4.showcase
           %a{:href => "https://bootstrap.algolia.com", :target => "_blank"}
@@ -81,6 +74,10 @@ layout: default
       .row
         %h2.page-section-title How it works
       .row
+        .col-sm-12
+          %img.img-responsive{:src => "./img/illus-howitworks.jpg"}
+          .spacer30
+      .row
         .col-sm-4.how-it-works
           %h3
             %span.how-it-works-number> 1
@@ -96,7 +93,7 @@ layout: default
         .col-sm-4.how-it-works
           %h3
             %span.how-it-works-number> 3
-            You add the JS/CSS snippets to your website
+            You add the autocomplete to your UI
           %p We’ll send you a few lines to code to integrate Algolia autocomplete and power your search.
           %p You will receive the same speed, relevance and best-in-class UX as our paying customers.
   #section_get-started.page-section.page-section-dark
@@ -107,10 +104,6 @@ layout: default
           %p Add the url of your documentation site and your email to the form at the top of the page. We’ll get back to you with what you need to integrate your new search into   your website.
           %p Don’t forget, DocSearch is completely free! There’s no need to sign up for Algolia or submit any payment information. Let’s tackle document search together.
           .spacer30
-          %p.text-center
-            %a.btn.btn-primary.btn-lg{href: '#top'}
-              Help me improve my search
-              %i.fa.fa-heart
 
 {% contentfor site-footer %}
 <script src="{{ "/js/home.js" | prepend: site.baseurl }}"></script>
